Name:				 CV
Version:             0.3.5.3
Description:         OpenCV Bindings
License:             GPL
License-file:        LICENSE
Category:            AI, Graphics, Machine Vision
Synopsis:            OpenCV based machine vision library
Homepage:            http://aleator.github.com/CV/
Description:         This is a machine vision package that wraps some functionality
                     of OpenCV library. This package has been developed for personal use and
                     is not meant to be a complete wrapper. It also includes some things not
                     in OpenCV.
                     .
                     Currently this package is quite dirty and requires much work on documentation
                     and code clean-up, but is somewhat tested.
                     .
                     (The scarce) Documentation is available at
                      <http://aleator.github.com/CV/>
                     .
                     Changelog.
                     0.3.5 - Many new wrappers, clean ups and other fixes.
                     .
                     0.3.4 - Pixelwise operations, bug fixes and additional documentation
                     .
                     0.3.3.0 - Improvements, including compatablity with opencv 2.3.1 and removal of
                     dependency with deprecated JYU.Utils
                     .
                     Changelog.
                     0.3.2.0 - Improvements, including fancier pixel-wise manipulations
                     .
                     Changelog.
                     0.3.0.2 - Workaround for compiling with OS X 10.6 & fixed errors about M_PI
                     .

Author:              Ville Tirronen
Maintainer:          ville.tirronen@jyu.fi
Build-Type:          Simple
Cabal-Version:       >=1.8
Extra-Source-Files:
                     examples/*.hs
                     examples/shapes/*.png
                     examples/shapePhoto.jpg
                     examples/chess.png
                     examples/fuse1.png
                     examples/fuse2.png
                     examples/smallLena.jpg
                     examples/elaine.jpg
Flag opencv23
  Description: Compatability for opencv 2.3.1
  Default:     True

Flag opencv24
  Description: Compatability for opencv 2.4
  Default:     False

Library
    Build-Tools:       c2hs >= 0.16.3
    Include-dirs:      cbits/
    Includes:          opencv/cv.h,
                       opencv/cxcore.h,
                       opencv/highgui.h,
                       cbits/cvWrapLEO.h,
                       cbits/cvWrapCore.h,
                       cbits/wrapImgProc.h,
                       cbits/cvIterators.h
    c-sources:         cbits/cvWrapLEO.c,
                       cbits/cvWrapCore.c,
                       cbits/wrapImgProc.c,
                       cbits/cvIterators.c
    install-includes:  cbits/cvWrapLEO.h,
                       cbits/cvWrapCore.h,
                       cbits/wrapImgProc.h,
                       cbits/cvIterators.h
    if flag(opencv23)
        cpp-options: -DOpenCV23
        cc-options: -DOpenCV23
    if flag(opencv24)
        cpp-options: -DOpenCV24
        cc-options: -DOpenCV24
    cc-options:        --std=c99 -U__BLOCKS__
    extra-libraries:   opencv_calib3d,
                       opencv_contrib,
                       opencv_core,
                       opencv_features2d,
                       opencv_flann,
                       opencv_gpu,
                       opencv_highgui,
                       opencv_imgproc,
                       opencv_legacy,
                       opencv_ml,
                       opencv_objdetect,
                       opencv_video

    Build-Depends:     base >= 4 && < 6,
                       parallel > 3.1,
                       array >= 0.2.0.0,
                       directory >= 1 && < 2,
                       mtl >= 1.1.0,
                       random >= 1.0.0,
                       carray >= 0.1.5,
                       QuickCheck >= 2.1,
                       containers >= 0.2,
                       storable-complex,
                       binary >= 0.5,
                       deepseq >= 1.1,
                       bindings-DSL >= 1.0.14 && < 1.1,
                       vector >= 0.7.0.1 && < 1.1,
                       lazysmallcheck >= 0.5 && < 1,
                       parallel-io    >= 0.3.2 && < 0.3.3,
                       storable-tuple >= 0.0.2 && <= 1

    Exposed-modules:   CV.Image                               
                       ,CV.Arbitrary                          
                       ,CV.Binary                             
                       ,CV.Bindings.Types                     
                       ,CV.Calibration                        
                       ,CV.ColourUtils                        
                       ,CV.ConnectedComponents                
                       ,CV.Conversions                        
                       ,CV.DFT
                       ,CV.Corners                            
                       ,CV.DrawableInstances                  
                       ,CV.Drawing                            
                       ,CV.Edges                              
                       ,CV.Features                           
                       ,CV.Filters                            
                       ,CV.Fitting                            
                       ,CV.FunnyStatistics                    
                       ,CV.Gabor                              
                       ,CV.HighGUI                            
                       ,CV.Histogram                          
                       ,CV.HoughTransform                     
                       ,CV.ImageMath CV.Sampling              
                       ,CV.ImageMathOp                        
                       ,CV.ImageOp                            
                       ,CV.Iterators                          
                       ,CV.LightBalance                       
                       ,CV.Marking                            
                       ,CV.Matrix                             
                       ,CV.Morphology                         
                       ,CV.MultiresolutionSpline              
                       ,CV.Operations                         
                       ,CV.Pixelwise                          
                       ,CV.TemplateMatching                   
                       ,CV.Textures                           
                       ,CV.Thresholding                       
                       ,CV.Tracking                           
                       ,CV.Transforms                         
                       ,CV.Video                              
                       ,Utils.DrawingClass                    
                       ,Utils.Function                        
                       ,Utils.GeometryClass                   
                       ,Utils.List                            
                       ,Utils.Point                           
                       ,Utils.Pointer                         
                       ,Utils.Rectangle
                       ,Utils.Stream
    Other-modules:     CV.Bindings.Matrix,
                       CV.Bindings.Calibrate,
                       CV.Bindings.Fittings,
                       CV.Bindings.Core,
                       CV.Bindings.ImgProc,
                       CV.Bindings.Tracking,
                       CV.Bindings.Drawing,
                       CV.Bindings.Error,
                       CV.Bindings.Features,
                       CV.Bindings.Iterators
    Extensions: CPP

source-repository head
  type:     git
  location: http://github.com/aleator/CV

source-repository head
  type:     git
  location: http://yousource.it.jyu.fi/cv

